fix: aligning color values with decisions made and fixing shadow tokens

--- a/src/css/design-tokens.css
+++ b/src/css/design-tokens.css
@@ -55,7 +55,7 @@
   --brand-colors-red-red100: #f7d5d8;
   --brand-colors-red-red200: #f1b9be;
   --brand-colors-red-red300: #e88f97;
-  --brand-colors-red-red400: #ff5263;
+  --brand-colors-red-red400: #e06470;
   --brand-colors-red-red500: #d73847;
   --brand-colors-red-red600: #b92534;
   --brand-colors-red-red700: #8e1d28;
@@ -388,14 +388,14 @@
   --color-secondary-muted: #f8883b26;
   --color-secondary-inverse: var(--brand-colors-grey-grey900);
   --color-secondary-disabled: #f8883b80;
-  --color-error-default: var(--brand-colors-red-red500);
+  --color-error-default: #ff5263;
   --color-error-default-hover: #ff4d58;
   --color-error-default-pressed: #f9868e;
   --color-error-alternative: var(--brand-colors-red-red400);
-  --color-error-muted: #d7384726;
+  --color-error-muted: #ff526326;
   --color-error-inverse: var(--brand-colors-grey-grey900);
   --color-error-disabled: #d7384780;
-  --color-error-shadow: #d7384766;
+  --color-error-shadow: #ff526366;
   --color-warning-default: var(--brand-colors-yellow-yellow500);
   --color-warning-default-hover: #ffc60a;
   --color-warning-default-pressed: #ffeaa3d1;
